--- a/frontend/src/styles/scheduling-form.css
+++ b/frontend/src/styles/scheduling-form.css
@@ -1,6 +1,6 @@
 
 .form-container {
-    margin-top: 80px;
+    margin-top: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,18 +10,30 @@
 .form-input input {
     width: 250px;
     padding: 5px 20px;
+    border: none;
+    border-bottom: 2px solid black;
+    outline: none;
 }
 
 .form-input-select {
+    position: relative;
+    right: 10px;
     width: 250px;
     padding: 5px 20px;
+    outline: none;
 }
 
 .form-input input[type="submit"] {
     width: 250px;
     padding: 5px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: dodgerblue;
+    color: white;
 }
 
 .form-input-error {
     color: red;
+    font-size: 16px;
+    font-weight: 500;
 }
