--- a/frontend/src/styles/patient-status.css
+++ b/frontend/src/styles/patient-status.css
@@ -14,6 +14,17 @@
     text-align: justify;
 }
 
+.patient-input input[type="submit"] {
+    width: 250px;
+    text-align: center;
+    font-size: 17px;
+    padding: 4px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: dodgerblue;
+    color: white;
+}
+
 .patient-label {
     margin-right: 271px;
 }
