--- a/frontend/src/styles/scheduling-form.css
+++ b/frontend/src/styles/scheduling-form.css
@@ -25,7 +25,9 @@
 
 .form-input input[type="submit"] {
     width: 250px;
-    padding: 5px 20px;
+    text-align: center;
+    font-size: 17px;
+    padding: 4px 20px;
     border: none;
     border-radius: 5px;
     background-color: dodgerblue;
