--- a/frontend/src/styles/scheduling-form.css
+++ b/frontend/src/styles/scheduling-form.css
@@ -21,6 +21,7 @@
     width: 250px;
     padding: 5px 20px;
     outline: none;
+    cursor: pointer;
 }
 
 .form-input input[type="submit"] {
@@ -32,6 +33,11 @@
     border-radius: 5px;
     background-color: dodgerblue;
     color: white;
+}
+
+.form-input input[type="submit"]:hover {
+    background-color: black;
+    transition: ease-out .5s;
 }
 
 .form-input-error {
